Popravak ruta
